# Hello-test

./: Readme  pyproject.toml
hello/scripts/: say_hello.py
